errors and terminal cmds/cant import ranksJson from ranks.json.txt
//error log
C:\Users\Hunter\Documents\code tings\Vulx-master\public\js\vulx.profile.js:9
import ranksJson from '../json/ranks.json' assert {type: 'json'};
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1027:15)
    at Module._compile (node:internal/modules/cjs/loader:1063:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:999:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Users\Hunter\Documents\code tings\Vulx-master\utils\discordHelper.js:13:12)
    at Module._compile (node:internal/modules/cjs/loader:1099:14)

Node.js v17.9.1
[nodemon] app crashed - waiting for file changes before starting...